- API: begin decoupling the actual transformation classes (e.g.,
    SplineWarpXform) from their reference image grids (used for
    precomputations). Instead, use classes like the new
    SplineWarpXformUniformVolume to tie both together, thus allowing more
    transformation objects to remain const in more situations (see, for
    example, modified implementation of ReformatVolume::WarpXform).

- Changed: command line tools now need to "opt-in" for XML support. This is to
    prevent cluttering Slicer's menu with modules that do not actually support
    it fully (yet).

- Fixed: mk_analyze_hdr command line option "--description" was broken.
- Fixed: contrary to the Wiki, NMI was the default registration criterion used
    in "film." This has now been changed to MSD, which is most approriate for
    within-modality registration.
- Fixed: ReformatVolume::CheckerboardMode was not initialized
- Fixed: ReformatVolume::CreateInterpoaltor did not support partial volume
    interpolation.
- Fixed: ReformatVolume::MakeTargetImage did not create a grid with proper
    geometry (i.e., offset, direction matrix, meta data).
- Fixed: conversion of non-axial Analyze images to Nrrd produced output file
    that was missing coordinate space definition.

- Added: all tools now support "--echo" command line switch, which dumps the
    command line to stdout before continuing with the program.
- Added: the "levelset" and "film" tools now fully support the Slicer3
    execution model. Support in "mrbias" tool has also been improved.
- Added: new "asegment" tool for atlas-based segmentation
- Added: command line class now automatically generates command line syntax
    description for "--help" output, unless a syntax description string is
   explicitly set.
- Added: cmtk::CommandLine class now permits arbitrary-typed variables to be
    set by command line enum parameter groups.
- Added: new optional "asegment_sri24" tool for atlas-based segmentation using